# OptimizationMethodsDemo

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
ConjugateDescent/: CMakeLists.txt  CMakeSettings.json  Common.hpp  ConjugateDescent.hpp  main.cpp
ConjugateGradient/: CMakeLists.txt  CMakeSettings.json  Common.hpp  ConjugateGradient.hpp  main.cpp
CoordinateDescent/: CMakeLists.txt  CMakeSettings.json  Common.hpp  CoordinateDescent.hpp  CoordinateInput.hpp  main.cpp  tests.txt
ExprTk/src/: exprtk_chladni_contour.cpp  exprtk_game_of_life.cpp  exprtk_julia_set_fractal.cpp  exprtk_nthroot_bisection.cpp  exprtk_radial_contour.cpp
GeneticAlgorithm/: CMakeLists.txt  CMakeSettings.json  Common.hpp  GA tests.txt  GeneticAlgorithm.hpp  GeneticBase.cpp  GeneticBase.hpp  GeneticEncoder.cpp  GeneticEncoder.hpp  GeneticTester.hpp  main.cpp
GradientDescent/: CMakeLists.txt  Common.hpp  GradientDescent.cpp  GradientDescent.hpp  GradientInput.hpp  LatexParser.hpp  exprtk.hpp  main.cpp
ParticleSwarm/: CMakeLists.txt  Common.hpp  ParticleBase.cpp  ParticleBase.hpp  ParticleSwarm.hpp  main.cpp  tests.txt
Qml/: Main.qml  ReportTab.qml  VerticalTabBar.qml
Qml/Components/: CMakeLists.txt  ConfirmDialog.qml  InputParams.qml  ReportList.qml  ReportListEntry.qml  SolutionDelegate.qml  SquareButton.qml  StyledButton.qml  StyledComboBox.qml  StyledTextField.qml  TabIconButton.qml  TableLoader.qml  TableRow.qml
Qml/Globals/: AppStates.qml  CMakeLists.txt
Qml/Singleton/: AppPalette.qml  AppStates.qml
Qml/Tabs/: FolderTab.qml  HomeTab.qml  PartsList.qml  ReportTab.qml  TaskTab.qml
Qml/Tabs/GlobalOptimization/: CMakeLists.txt  InputParams.qml  ReportTab.qml  TaskTab.qml
Qml/Tabs/LocalOptimization/: CMakeLists.txt  InputParams.qml  ReportTab.qml  TaskTab.qml
Sources/: AppEnums.hpp  CMakeLists.txt  Common.hpp  FileManager.cpp  FileManager.hpp  InputData.hpp  LOInputData.hpp  MainController.cpp  MainController.hpp  QuickInfo.hpp  QuickInfoListModel.cpp  QuickInfoListModel.hpp  Report.hpp  ReportModel.cpp  ReportModel.hpp  ReportReader.cpp  ReportReader.hpp  ReportWriter.cpp  ReportWriter.hpp  Reporter.cpp  Reporter.hpp  ResultData.hpp  SolutionModel.hpp  main.cpp
Sources/DataStructures/: GOInputData.hpp  InputData.hpp  QuickInfo.hpp  Report.hpp  SolutionEntry.hpp  SolutionMessage.hpp  SolutionTable.hpp  SolutionValue.hpp
Sources/FileOperators/: FileManager.cpp  FileManager.hpp  ReportReader.cpp  ReportReader.hpp  ReportWriter.cpp  ReportWriter.hpp
Sources/Models/: QuickInfoListModel.cpp  QuickInfoListModel.hpp  ReportsModel.hpp  SolutionModel.cpp  SolutionModel.hpp  SolutionTableModel.cpp  SolutionTableModel.hpp
Sources/Tests/: TestReporter.hpp
